# ariel-microflow-ml

./: .gitignore  Cargo.toml  README.md  laze-project.yml  pyproject.toml  readme
building/: export_iree_mlir.sh  generate_lenet_tflite.py  lenet.ipynb  mcunet.ipynb  mobilenetv2.ipynb  pyproject.toml
building/ariel_os_tiny_ml_building.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
building/models/: lenet_int8.tflite
building_tf/: lenet.ipynb  mcunet.ipynb  pyproject.toml
building_torch/: lenet.ipynb  mcunet.ipynb  pyproject.toml
models/: lenet_int8.tflite
python/ariel_os_tiny_ml_building.egg-info/: PKG-INFO  SOURCES.txt
python/building/: generate_lenet_tflite.py  pyproject.toml
samples/lenet/: sample.rs
src/: main.rs  multicore_backend.rs
