[package]
name = "ariel-os-tiny-ml"
version = "0.1.0"
edition = "2024"

[dependencies]
ariel-os = { path = "build/imports/ariel-os/src/ariel-os", features = ["alloc"] }
ariel-os-boards = { path = "build/imports/ariel-os/src/ariel-os-boards" }
microflow = { version = "0.1.3", default-features = false }
nalgebra = { version = "0.32", default-features = false }

[features]
# Exactly one of these modes is typically enabled by `laze build ... run`.
# We don't use them directly in the code, but `laze` expects them to exist.
run = []
run_many = []
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(context, values(any()))',
] }
