[package]
name = "ariel-microflow-ml"
version = "0.1.0"
edition = "2024"

[dependencies]
ariel-os = { path = "build/imports/ariel-os/src/ariel-os", features = ["time"] }
ariel-os-boards = { path = "build/imports/ariel-os/src/ariel-os-boards" }
microflow = { version = "0.1.3", default-features = false }
nalgebra = { version = "0.32", default-features = false }

[features]
default = []

lenet5 = []
lenet5q = []

mcunet = []
mcunetq = []


run = []
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(context, values(any()))',
] }
