[project]
name = "ariel-os-tiny-ml-building"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "tensorflow[and-cuda]==2.18.0",
  "numpy",
  "tensorflow-model-optimization",
  # IREE SavedModel -> MLIR import.
  "iree-compiler",
  "iree-tools-tf",
  # ONNX export (for conda iree-import-onnx pipeline).
  "tf2onnx",
  "onnx==1.16.1",
  # Notebook support
  "ipykernel",
  "jupyter",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

