[project]
name = "ariel-os-tiny-ml-building"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
  "tensorflow[and-cuda]>=2.10",
  "numpy",
  "tensorflow-model-optimization",
  "ipykernel",
  "jupyter",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "types-tensorflow>=2.18.0.20260322",
]


