[project]
name = "ariel-os-tiny-ml-building-torch"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
  "numpy",
  "torch",
  "torchvision",
  "litert-torch",
  "ipykernel",
  "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
